# httpbin-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml
src/: main.rs  server.rs  service.rs
src/pages/: api_docs.rs  index.rs  ip.rs  mod.rs  not_found.rs  openapi.rs  user_agent.rs
src/routes/: images.rs  mod.rs  request_inspection.rs  response_formats.rs  root.rs  status_codes.rs
src/templates/: ai-plugin.json  humans.txt  index.html  json.json  not_found.html  openapi.yaml
static/: favicon.txt  openapi.yaml
