[package]
name = "httpbin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { git="https://github.com/tokio-rs/axum.git", branch="david/hyper-1.0-rc.x", features = ["headers", "http2"] }
mime = "0.3"
minijinja = "0.32.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
http-body-util = "0.1.0-rc.2"
tower = { version = "0.4", features = ["util"] }
